--- a/style.css
+++ b/style.css
@@ -1,9 +1,35 @@
+:root {
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
-    margin: 24px;
-  }
-  
-  @media (max-width: 500px) {
-    body {
-      margin: 8px;
-    }
-  }
+    display: grid;
+    justify-content: center;
+    background-color: lightblue;
+}
+
+#container {
+    display: grid;
+    background-color: red;
+}
+
+#container,
+#header,
+#content,
+#footer {
+    border: solid;
+    border-width: 1px;
+    width: 100vw;
+}
+
+#header {
+    height: 100px;
+}
+
+#content {
+    height: 300px;
+}
+
+#footer {
+    height: 100px;
+}
