--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
 }
 
 body {
-    display: grid;
-    justify-content: stretch;
-    padding: 10px;
+	display: grid;
+	justify-content: stretch;
 }
 
 #container {
-    display: grid;
-    width: 200px;
+	display: grid;
+	width: 100%;
 }
 
 #container,
@@ -39,121 +38,120 @@ body {
 #email,
 #contact-links,
 #footer-photo {
-    border: solid;
-    border-width: 1px;
-    width: 100%;
-    height: 100%;
-    display: grid;
+	border: solid;
+	border-width: 1px;
+	align-content: stretch;
+	justify-content: stretch;
+	display: grid;
+	margin: 5px;
+    padding: 5px;
 }
 
 #header {
-    height: 25vh;
-    grid-template-columns: .75fr 1fr;
+	grid-template-columns: 0.75fr 1fr;
 }
 
 #header-photo {
-    grid-column-start: 1;
+	grid-column-start: 1;
 }
 
 #about {
-    grid-column-start: 2;
-    grid-template-rows: 1fr 2fr 1fr;
+	grid-column-start: 2;
+	grid-template-rows: 1fr 2fr 1fr;
 }
 
 #header-title {
-    grid-row-start: 1;
+	grid-row-start: 1;
 }
 
 #header-description {
-    grid-row-start: 2;
+	grid-row-start: 2;
 }
 
 #header-links {
-    grid-row-start: 3;
+	grid-row-start: 3;
 }
 
 #content {
-    height: 50vh;
-    grid-template-rows: 1fr 6fr;
+	grid-template-rows: 1fr 6fr;
 }
 
 #title {
-    grid-row-start: 1;
+	grid-row-start: 1;
 }
 
 #work {
-    grid-row-start: 2;
+	grid-row-start: 2;
 }
 
 .project {
-    grid-template-rows: 1.75fr 1fr;
+	grid-template-rows: 1.75fr 1fr;
 }
 
 .photo {
-    grid-row-start: 1;
+	grid-row-start: 1;
 }
 
 .info {
-    grid-row-start: 2;
-    grid-template-rows: 1fr 3fr;
+	grid-row-start: 2;
+	grid-template-rows: 1fr 3fr;
 }
 
 .top {
-    grid-row-start: 1;
-    grid-template-columns: 8fr 1fr 1fr;
+	grid-row-start: 1;
+	grid-template-columns: 8fr 1fr 1fr;
 }
 
 .name {
-    grid-column-start: 1;
+	grid-column-start: 1;
 }
 
 .github {
-    grid-column-start: 2;
+	grid-column-start: 2;
 }
 
 .link {
-    grid-column-start: 3;
+	grid-column-start: 3;
 }
 
 .description {
-    grid-row-start: 2;
+	grid-row-start: 2;
 }
 
 #footer {
-    height: 25vh;
-    grid-template-columns: 1fr .75fr;
+	grid-template-columns: 1fr 0.75fr;
 }
 
 #contact {
-    grid-column-start: 1;
-    grid-template-rows: 1fr 5fr;
+	grid-column-start: 1;
+	grid-template-rows: 1fr 5fr;
 }
 
 #contact-title {
-    grid-row-start: 1;
+	grid-row-start: 1;
 }
 
 #contact-info {
-    grid-row-start: 2;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+	grid-row-start: 2;
+	grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 
 #contact-note {
-    grid-row-start: 1;
+	grid-row-start: 1;
 }
 
 #phone {
-    grid-row-start: 2;
+	grid-row-start: 2;
 }
 
 #email {
-    grid-row-start: 3;
+	grid-row-start: 3;
 }
 
 #contact-links {
-    grid-row-start: 4;
+	grid-row-start: 4;
 }
 
 #footer-photo {
-    grid-column-start: 2;
+	grid-column-start: 2;
 }
