--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
 
 #header-photo {
 	grid-column-start: 1;
+	justify-items: center;
 }
 
 #about {
@@ -94,8 +95,8 @@ body {
 
 .photo {
 	grid-row-start: 1;
-	justify-content: center;
-	align-content: center;
+	justify-items: center;
+	align-items: center;
 }
 
 .info {
@@ -163,5 +164,9 @@ body {
 }
 
 .project-image {
+	max-width: 90%;
+}
+
+#ryan-photo {
 	max-width: 90%;
 }
