--- a/style.css
+++ b/style.css
@@ -64,6 +64,8 @@ body {
 
 #header-title {
 	grid-row-start: 1;
+	font-weight: bold;
+	font-size: 16pt;
 }
 
 #header-description {
@@ -81,6 +83,8 @@ body {
 #title {
 	grid-row-start: 1;
 	justify-content: center;
+	font-weight: bold;
+	font-size: 16pt;
 }
 
 #work {
@@ -91,12 +95,15 @@ body {
 
 .project {
 	grid-template-rows: 3fr 1fr;
+	padding: 0px;
 }
 
 .photo {
 	grid-row-start: 1;
 	justify-items: center;
 	align-items: center;
+	margin: 0px;
+	padding: 0px;
 }
 
 .info {
@@ -106,11 +113,15 @@ body {
 
 .top {
 	grid-row-start: 1;
-	grid-template-columns: 8fr 1fr 1fr;
+	grid-template-columns: 6fr 1fr 1fr;
+	padding: 0;
 }
 
 .name {
 	grid-column-start: 1;
+	font-weight: bold;
+	font-size: 14pt;
+	margin: 0;
 }
 
 .github {
@@ -136,6 +147,8 @@ body {
 
 #contact-title {
 	grid-row-start: 1;
+	font-weight: bold;
+	font-size: 16pt;
 }
 
 #contact-info {
@@ -161,6 +174,7 @@ body {
 
 #footer-photo {
 	grid-column-start: 2;
+	justify-items: center;
 }
 
 .project-image {
@@ -168,5 +182,9 @@ body {
 }
 
 #ryan-photo {
-	max-width: 90%;
+	max-width: 100%;
+}
+
+#family-photo {
+	max-width: 100%;	
 }
