--- a/style.css
+++ b/style.css
@@ -50,12 +50,13 @@ body {
 }
 
 #header {
-	grid-template-columns: 1fr .75fr;
+	grid-template-columns: 1fr 1.5fr;
 }
 
 #header-photo {
 	grid-column-start: 1;
 	justify-content: center;
+	align-content: center;
 	max-width: 400px;
 }
 
