--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
 
 #header-links {
 	grid-row-start: 3;
+	display: grid;
 }
 
 #content {
@@ -158,7 +159,7 @@ body {
 }
 
 #footer {
-	grid-template-columns: 1fr 0.75fr;
+	grid-template-columns: 1fr 1fr;
 }
 
 #contact {
@@ -214,8 +215,7 @@ body {
 }
 
 .github-logo {
-	width: 20%;
-	justify-self: center;
+	width: 50px;
 }
 
 #github-footer,
