--- a/style.css
+++ b/style.css
@@ -8,21 +8,9 @@ body {
 	background-color: black;
 }
 
-@media (max-width: 400px) {
-	#container {
-		max-width: 380px;
-	}
-}
-
 @media (max-width: 500px) {
 	#container {
-		max-width: 480px;
-	}
-}
-
-@media (max-width: 600px) {
-	#container {
-		max-width: 580px;
+		max-width: 90vw;
 	}
 }
 
