--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	max-width: 100vw;
+	overflow-x: hidden;
+}
+
 :root {
 	font-family: Arial, Helvetica, sans-serif;
 }
